# robotics

linefollower/: WR_dokumentacja_Szczygielski_Wewiór.docx  calibrate.py  linefollower.py  oldone.py  piotrekmilosz.py  python_test.py  stop.py  symutest.py  (+1 more)
tiago_simulation/src/stero_mobile/: CMakeLists.txt  package.xml
tiago_simulation/src/stero_mobile/launch/: default_projekt3.launch  korytarzyk.launch  mieszkanko.launch  navigation.launch  navigation_amcl.launch  tiago_korytarzyk.launch  tiago_mieszkanko.launch  tiago_simple.launch
tiago_simulation/src/stero_mobile/maps/korytarzyk/: mapa_korytarzyk.yaml
tiago_simulation/src/stero_mobile/maps/mieszkanko/: mapa_mieszkanko.yaml
tiago_simulation/src/stero_mobile/models/table_0/: model.config  model.sdf
tiago_simulation/src/stero_mobile/models/table_1/: model.sdf
tiago_simulation/src/stero_mobile/models/table_2/: model.config  model.sdf
tiago_simulation/src/stero_mobile/param/: nav_base_local_planner_params.yaml  nav_costmap_common_params.yaml  nav_global_costmap_params.yaml  nav_local_costmap_params.yaml
tiago_simulation/src/stero_mobile/rviz/: simple.rviz
tiago_simulation/src/stero_mobile/src/: kwadrat.cpp  navigation.cpp  spawn_objects.py  tower.py
tiago_simulation/src/stero_mobile/worlds/: korytarzyk.world  mieszkanko.world  mieszkanko_tables.world
tiago_simulation/src/stero_mobile/worlds/korytarzyk/: model.config  model.sdf
tiago_simulation/src/stero_mobile/worlds/mieszkanko/: model.config  model.sdf
tiago_simulation/src/stero_mobile/worlds/mieszkanko_tables/: model.config  model.sdf
(+7 files in other folders)
