<?xml version="1.0"?>
<package format="2">
  <name>stero_mobile_init</name>
  <version>1.2.4</version>
  <description>uzupelnic</description>
  <maintainer email="DO-UZUPELNIENIA@mail.com"> DO-UZUPELNIENIA!!!! </maintainer>
  <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <!-- <run_depend>velma_common</run_depend> -->

    <exec_depend>velma_common</exec_depend>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>gazebo_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_export_depend>gazebo_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>tf</build_export_depend>
    <exec_depend>gazebo_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf</exec_depend>

</package>
